src/kubernetes/deployment-service-event.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: event-booking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: 22i0857/event-service:latest # Replace with your built image
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: event-booking
spec:
  selector:
    app: event-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
