src/kubernetes/deployment-service-ntification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: event-booking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: notification-service-image:latest # Replace with your built image
          ports:
            - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: event-booking
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
  type: ClusterIP
